# freesurfer

./: CMakeLists.txt  Makefile.am  configure.in  test.sh
anatomicuts/: AnatomiCuts_correspondences.cxx  CMakeLists.txt
devgeodesics/: Makefile.am  devgeodesics.c
dmri_tensoreig/: CMakeLists.txt  dmri_tensoreig.cpp
dngtester/: CMakeLists.txt
dummy/: dummy.c  dummy.cpp
fem_elastic/: exportGcam.cpp  fapplyMorph.cpp  fcreateMorph.cpp  fsurf2vol.cpp  morph.cpp  simple_timer.h
freeview/: CMakeLists.txt  Contour2D.cpp  Cursor2D.cpp  FSSurface.cpp  FSVolume.cpp  GenericRenderView.cpp  LayerDTI.cpp  LayerFCD.cpp  LayerMRI.cpp  LayerMRI.h  LayerPointSet.cpp  LayerROI.cpp  LayerSurface.cpp  LayerVolumeTrack.cpp  MainWindow.cpp  MyVTKUtils.cpp  QVTKWidget.cxx  RenderView.cpp  RenderView3D.cpp  ThreadIOWorker.cpp  main.cpp  vtkSimpleLabelEdgeFilter.h
gems/: kvlAtlasMeshPositionCostAndGradientCalculator.cxx  kvlAtlasMeshPositionCostAndGradientCalculator.h  kvlAtlasMeshRasterizor.cxx  kvlAtlasMeshRasterizor.h  kvlConditionalGaussianEntropyCostAndGradientCalculator.cxx  kvlHistogrammer.cxx
include/: Makefile.am  argparse.h  base.h  cma.h  diag.h  evschutils.h  fastmarching.h  fftutils.h  fnvhash.h  gclass.h  geodesicsheat.h  gifti.h  hips.h  image.h  label.h  log.h  matrix.h  mri.h  mri2.h  mriTransform.h  mriclass.h  mris_topology.h  mrisurf.h  mrisurf_base.h  rbf.h  rgb.h  rgb_image.h  romp_support.h  stats.h  timer.h  utils.h  version.h  xVoxel.h
lineprof/: CMakeLists.txt  Preprocessor.cpp
matlab/: Makefile.am
matlab/samseg/: run_samseg.m  samseg
mri_binarize/: test.sh
mri_ca_label/: mri_ca_label.cpp  test.sh
mri_ca_register/: mri_ca_register.cpp
mri_compute_change_map/: mri_compute_change_map.cpp
mri_concatenate_gcam/: test.sh
mri_convert/: CMakeLists.txt  mri_convert.cpp  test.sh
mri_em_register/: mri_em_register.cpp
mri_fuse_segmentations/: mri_fuse_segmentations.cpp
mri_glmfit/: mri_glmfit.cpp
mri_hausdorff_dist/: mri_hausdorff_dist.cpp
mri_hires_register/: mri_hires_register.cpp  mri_linear_align_binary.cpp  mri_nl_align.cpp
mri_info/: mri_info.cpp
mri_label2label/: test.sh
mri_mc/: test.sh
mri_otl/: CMakeLists.txt
mri_parse_sdcmdir/: CMakeLists.txt
mri_probedicom/: CMakeLists.txt
mri_refine_seg/: mri_refine_seg.cpp
mri_relabel_hypointensities/: test.sh
mri_rf_label/: mri_rf_label.cpp
mri_rf_long_label/: mri_rf_long_label.cpp
mri_robust_register/: mri_robust_register.cpp  mri_robust_template.cpp
mri_sbbr/: mri_sbbr.cpp
mri_seg_overlap/: mri_seg_overlap.cpp
mri_segcentroid/: Makefile.am  mri_segcentroid.cpp
mri_segment/: mri_segment.cpp
mri_tessellate/: mri_tessellate.cpp
mri_train/: mri_train.c
mri_vol2vol/: mri_vol2vol.cpp
mri_watershed/: mri_validate_skull_stripped.cpp  mri_watershed.cpp
mri_watershed/brain_volume/: mri_brain_volume.cpp
mri_wbc/: mri_wbc.cpp
mris_classify_thickness/: mris_classify_thickness.cpp
mris_compute_overlap/: mris_compute_overlap.cpp
mris_convert/: mris_convert.cpp
mris_curvature_stats/: mris_curvature_stats.c  mris_curvature_stats.cpp
mris_defects_pointset/: mris_defects_pointset.cpp
mris_deform/: mris_deform.cpp
mris_distance_to_label/: mris_distance_to_label.cpp
mris_divide_parcellation/: test.py
mris_fix_topology/: test.sh
mris_info/: mris_info.cpp
mris_init_global_tractography/: mris_init_global_tractography.cpp
mris_label2annot/: mris_label2annot.cpp
mris_label_area/: mris_label_area.cpp
mris_mesh_subdivide/: mris_mesh_subdivide.cxx
mris_ms_refine/: mris_ms_refine.cpp
mris_ms_surface_CNR/: mris_ms_surface_CNR.cpp
mris_register_label_map/: mris_register_label_map.cpp
mris_register_to_volume/: mris_register_to_volume.cpp
mris_resample/: mris_resample.cpp
mris_rf_label/: mris_rf_label.cpp
mris_segment/: mris_segment.cpp
mris_segmentation_stats/: mris_segmentation_stats.cpp
mris_spharm/: mris_spharm.c
mris_sphere/: CMakeLists.txt  test.sh
mris_topo_fixer/: mris_topo_fixer.cpp
mris_volmask/: mris_volmask.cpp  mris_volmask_old.cpp
python/bindings/: surface.cpp  surface.h  volume.cpp  volume.h
python/freesurfer/: __init__.py  _surface.py
qdec/: CMakeLists.txt
rbftest/: rbftest.cpp
resurf/: CMakeLists.txt  mris_profileClustering.cxx
resurf/Code/: fsSurface.h
scripts/: CMakeLists.txt
spherical_stats/: spherical_stats.cpp
utils/: Bruker.cpp  CMakeLists.txt  DICOMRead.cpp  MRIio_old.cpp  Makefile.am  afni.cpp  bfileio.cpp  class_array.cpp  connectcomp.cpp  cpputils.cpp  diffuse.cpp  error.cpp  evschutils.cpp  filter.cpp  fsPrintHelp.cpp  gca.cpp  gcamorph.cpp  gclass.cpp  gcsa.cpp  geodesics.cpp  geodesicsheat.cpp  gifti.cpp  gifti_local.cpp  hips.cpp  image.cpp  imageio.cpp  imautils.cpp  label.cpp  matrix.cpp  mri.c  mri.cpp  mri2.cpp  mriTransform.cpp  mri_identify.cpp  mriclass.c  mriclass.cpp  mrifilter.cpp  mriflood.cpp  mrihisto.cpp  mriio.cpp  (+26 more)
utils/test/: CMakeLists.txt  test.sh
utilscpp/: argparse.cpp  globals.cpp  log.cpp  mris_fastmarching.cpp  mris_topology.cpp
vtkfsio/: vtkFSSurfaceLabelSource.cxx  vtkFSSurfaceLabelSource.h  vtkFSSurfaceScalarsReader.cxx  vtkFSSurfaceSource.h  vtkFSSurfaceWriter.cxx  vtkFSSurfaceWriter.h  vtkFSVolumeSource.h
vtkutils/: CMakeLists.txt  vtkFDTensorGlyph.cxx  vtkFDTensorGlyph.h  vtkFreesurferLookupTable.h  vtkInflatePolyData.cxx  vtkODFGlyph.cxx  vtkODFGlyph.h  vtkRGBAColorTransferFunction.cxx  vtkRGBAColorTransferFunction.h  vtkRGBATransferFunction.h
